# audio-processing-experiments

./: .gitignore  README.md
multi-person-pose-2d/: README.md  pyproject.toml
multi-person-pose-2d/dataset/: download.py
